# fava_budget_freedom

./: .gitignore  README.md  example.beancount  pyproject.toml
fava_budget_freedom/: __init__.py  budget.py  calculator.py  usage.py  utils.py
fava_budget_freedom/templates/: BudgetFreedom.html
